<resources>
    <string name="app_name">Evence</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="evence_email">evence.team@gmail.com</string>
    <string name="scan_qr">Scan QR</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="created_by">Created by Daniel Perez and Gabriel Carmen</string>
    <string name="leave_a_rating">Leave a rating</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share_app">Share App</string>
    <string name="date_format">Use dd-mm-yyy date format</string>
    <string name="saved_dark_mode_setting">dark_mode_setting</string>
    <string name="saved_date_format_setting">date_format_setting</string>
    <string name="saved_qr_preview_setting">qr_preview_setting</string>
    <string name="saved_setting_shared_pref_name">saved_setting</string>
    <string name="appearance">Appearance</string>
    <string name="scanning">Scanning...</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="recently_created">Recently created</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="evence_playstore_url">https://play.google.com/store/apps/details?id=projects.evenceteam.evence</string>

    <string name="privacy_policy_content">
        <![CDATA[
        <center><h1>Evence - Privacy Policy</h1></center>

        <h3><b>Who we are</b></h3>
        <p>We are the Evence team. Our app name is Evence, available on Android.</p>

        <h3><b>What user data we collect</b></h3>
        <p>We do not collect user data. We do not own any server. We do not distribute or sell any user data to any third party entities online. No internet connection is required to use Evence; any user data is processed entirely within the user’s device. This user data includes any data entered by the user into Evence, any data scanned from barcode images including QR images, and any QR image generated by Evence.</p>
        <p>Evence allows the user the option to share this user data, only at their will, from Evence to another installed app. Examples include, but not limited to, saving events to calendar apps, sharing QR images to messaging apps, and opening urls in browser apps. The Evence team is not responsible for any risk that may arise if the user chooses to share this data outside Evence.</p>
        <p>Evence cannot access any data from other apps(e.g. Evence can share a QR image to a photo app, but cannot access any photos from it).</p>
        <p>However, Evence uses a third-party library, called Google ML Kit, that may collect metrics data for diagnostics and usage analytics. This will not include any user data. For detailed info about the metrics data collected, visit <em><u>https://developers.google.com/ml-kit/terms.</u></em></p>

        <h3><b>What device permissions we need</b></h3>
        <p>Evence may use the device’s Camera, Files, and Media, only after permission is granted by the user. These permissions can be revoked anytime in the device’s settings. Evence uses the device’s Camera to scan QR images and other types of barcode images. Evence may use the device’s Files and Media to store QR images and ICAL files, at the user’s will.</p>

        <h3><b>Third party libraries</b></h3>
        <p>Evence uses a third-party library, called the Google ML Kit, which enables offline and on-device machine learning to scan data from QR images and other types of barcode images. Data scanned from these barcode images may include calendar events, texts, urls, ISBNs, contact info, WiFi connection info, geographic location, and more. For more info about what types of data can be retrieved from barcode images, visit <em><u>https://developers.google.com/ml-kit/vision/barcode-scanning</u></em>.</p>
        <p>While the Google ML Kit offers various machine learning capabilities, only the barcode scanning feature is implemented into Evence. For more info about the Google ML Kit, visit <em><u>https://developers.google.com/ml-kit/guides.</u></em></p>
        <p>To find all third-party libraries used, navigate Evence to About > Licenses.</p>

        <br/><br/><br/><br/>
        <p>TL;DR Please do not sue us lol. Evence is a personal project and we make no profit from it.</p>

        ]]>
    </string>
    <string name="licenses">Licenses</string>
    <string name="evence_feedback">Evence Feedback</string>
</resources>
