<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootLayout"
    android:clipToPadding="false"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            style="@style/AboutPageCardview">
            <LinearLayout style="@style/CardviewLayout">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:src="@drawable/evence_icon" />

                <TextView
                    style="@style/AboutPageText"
                    android:text="@string/app_name" />

                <TextView
                    style="@style/AboutPageText"
                    android:text="@string/app_version" />

                <TextView
                    style="@style/AboutPageText"
                    android:text="@string/created_by" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            style="@style/AboutPageCardview"
            android:backgroundTint="@color/blue1"
            android:onClick="@{()->view.shhhh()}">

            <LinearLayout style="@style/CardviewLayout">

                <TextView
                    style="@style/AboutPageText"
                    android:text="@string/leave_a_rating"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/toolbar"
        style="@style/CustomBottomAppBar"
        app:fabAlignmentMode="end"
        app:title="@string/about">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_btn"
        style="@style/FAB"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_email_white_24dp"
        app:layout_anchor="@+id/toolbar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>